pom fix + readme